--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=market-api
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/marketDb
+spring.datasource.username=root
+spring.datasource.password=rilind
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
